[package]
name = "promptify"
version = "0.1.0"
edition = "2021"
description = "A tool to generate LLM context prompts from directory contents"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4"
anyhow = "1.0"
content_inspector = "0.2"
pathdiff = "0.2"
glob = "0.3"
bytesize = "1.3"
